opam-version: "2.0"

synopsis: "Scylla/Cassandra database driver written in OCaml"

version: "0.0.1"
license: "MIT"
homepage: "https://github.com/anmolsahoo25/ocaml-scylla"
bug-reports: "https://github.com/anmolsahoo25/ocaml-scylla/issues"

authors: [
  "Anmol Sahoo"
]

maintainer: [
  "Anmol Sahoo <anmol.sahoo25@gmail.com>"
]

dev-repo: "git+https://github.com/anmolsahoo25/ocaml-scylla"

depends: [
  "dune" {>= "2.0.0"}
  "ocaml" {>= "4.08.0"}
  "scylla"
  "lwt" {>= "5.3.0"}
]

depopts: [
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

description: "Lwt_unix support for ocaml-scylla"

