opam-version: "2.0"

synopsis: "Scylla/Cassandra database driver written in OCaml"

version: "0.0.1"
license: "MIT"
homepage: "https://github.com/anmolsahoo25/ocaml-scylla"
bug-reports: "https://github.com/anmolsahoo25/ocaml-scylla/issues"

authors: [
  "Anmol Sahoo"
]

maintainer: [
  "Anmol Sahoo <anmol.sahoo25@gmail.com>"
]

dev-repo: "git+https://github.com/anmolsahoo25/ocaml-scylla"

depends: [
  "dune" {>= "2.0.0"}
  "dune-configurator"
  "ocaml" {>= "4.08.0"}
  "angstrom" {>= "0.14.1"}
  "faraday" {>= "0.7.1"}
  "lwt" {>= "5.3.0"}
  "uutf" {>= "1.0.2"}

  "ounit2" {with-test & >= "2.2.3"}
  "bigstring" {with-test & >= "0.3"}
]

depopts: [
]

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

description: "A driver for Scylla/Cassandra databases implementing
the CQL binary protocol in OCaml"

